new: add current_user_only query parameter to annotation counts
